force-app/main/default/objects/Location/fields/Active_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Active_Inactive__c</fullName>
    <formula>IF(


OR( ISPICKVAL( Status__c , &quot;Inactive&quot;)), IMAGE(&quot;http://i346.photobucket.com/albums/p420/Alexwaddell47/red_zpsstmdfrrt.png&quot;,&quot;red&quot;,14,14),


IF(


AND(


ISPICKVAL( Status__c , &quot;Active&quot;)) , IMAGE(&quot;http://i346.photobucket.com/albums/p420/Alexwaddell47/120px-Green_sphere_zpsvi7byqdp.png&quot;, &quot;Green&quot;, 16, 16), NULL


))</formula>
    <label>Active / Inactive</label>
    <type>Text</type>
</CustomField>