force-app/main/default/objects/Location/fields/Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Location_ID__c</fullName>
    <displayFormat>Loc- {00000}</displayFormat>
    <label>Location ID</label>
    <type>AutoNumber</type>
</CustomField>