force-app/main/default/objects/Location/fields/Location_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_Phone_Number__c</fullName>
    <label>Location Phone Number</label>
    <type>Phone</type>
</CustomField>