force-app/main/default/objects/Location/fields/Number_of_Hires__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hires__c</fullName>
    <label>Number of Hires</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>