force-app/main/default/objects/Location/fields/Size_of_Candidate_Pool__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Candidate_Pool__c</fullName>
    <label>Size of Candidate Pool</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>