force-app/main/default/objects/Location/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Location_Phone_Number__c)) , NOT(REGEX(Location_Phone_Number__c  , &quot;(\\d){10}&quot;)))</errorConditionFormula>
    <errorDisplayField>Location_Phone_Number__c</errorDisplayField>
    <errorMessage>Phone number should have 10 digits</errorMessage>
</ValidationRule>