force-app/main/default/objects/Location/validationRules/Validation_For_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_For_Address</fullName>
    <active>true</active>
    <description>Address field is Mandatory</description>
    <errorConditionFormula>OR ( ISBLANK(Text ( Address__CountryCode__s) ) , ISBLANK(  Address__Street__s ), ISBLANK( Address__City__s ), ISBLANK(Text(  Address__StateCode__s )),ISBLANK(  Address__PostalCode__s ))</errorConditionFormula>
    <errorMessage>Address is Mandatory</errorMessage>
</ValidationRule>